fixed up images

--- a/blog.html
+++ b/blog.html
@@ -58,9 +58,9 @@
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
 	        	<div class="text mt-5">
-	        		<span class="subheading">Home -> Forum</span>
-	            <h1 class="mb-3"> <span>Forum</span></h1>
-	            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+	        		<span class="subheading" style='color: white !important;'>Home -> Forum</span>
+	            <h1 class="mb-3" style='color: white !important;'> <span>Forum</span></h1>
+	            <p style='color: white !important;'>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
 
 	          </div>
 	        </div>
