changed analysis image, fixed some stuff up

--- a/index.html
+++ b/index.html
@@ -76,17 +76,22 @@
 
         </style>
 
-        <div class="hero-image">
-          <div class="hero-text">
-            <div class="text-center heading-section ftco-animate">
-              <h2 class="mb-2">SuiSense</h2>
-                      </div>
-                      <center>
-                                <div class="col-md-7 ftco-animate">
-            <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
-          </div>
-        </center>
-            <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
+        <div class="hero-wrap js-fullheight">
+          <div class="overlay"></div>
+          <div class="container-fluid px-0">
+          	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
+    	      	<img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/altDiagnosis.png" alt="">
+
+              <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
+
+    	        	<div class="text mt-5">
+    	            <h1 class="mb-3"> <span>SuiSense</span></h1>
+                  <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
+                  <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
+
+    	          </div>
+    	        </div>
+    	    	</div>
           </div>
         </div>
 
