--- a/analysis.html
+++ b/analysis.html
@@ -57,11 +57,11 @@
       <div class="overlay"></div>
       <div class="container-fluid px-0">
       	<div class="row d-md-flex no-gutters slider-text align-items-center js-fullheight justify-content-end">
-	      	<img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/altDiagnosis.png" alt="">
+	      	<img class="one-fifth js-fullheight align-self-end order-md-last img-fluid" src="images/diagnosispic.png" alt="">
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
 	        	<div class="text mt-5">
-	        		<span class="subheading" style='color: white !important;'>Home -> Diagnosis</span>
+	        		<span class="subheading">Home -> Diagnosis</span>
 	            <h1 class="mb-3" style='color: white !important;'> <span>Diagnosis</span></h1>
 
 	          </div>
