--- a/index.html
+++ b/index.html
@@ -310,6 +310,64 @@
           </div>
         </div>
       </div>
+
+
+      <div id="ftco-about">
+        <div class="container">
+          <div class="row justify-content-center mb-5 pb-3">
+            <div class="col-md-7 text-center heading-section ftco-animate">
+
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="ftco-staff">
+                <img src="images/team/rueb.png" alt="Template">
+                <h3>Marilee<br>Ruebsamen</h3>
+                <strong class="role">Therapist</strong>
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="ftco-staff">
+                <img src="images/team/vijarjpic.png" alt="Template">
+                <h3>Viraaj<br>Reddi</h3>
+                <strong class="role">Fullstack, Backend</strong>
+
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="ftco-staff">
+                <img src="images/team/adithyapic.png" alt="Template">
+                <br>
+                <h3>Adithya<br>Peruvemba</h3>
+                <strong class="role">Frontend, UI Developer</strong>
+
+              </div>
+            </div>
+            <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+              <div class="ftco-staff">
+                <img src="images/team/ishaanpic.png" alt="Template">
+                <h3>Ishaan<br>Bhandari</h3>
+                <strong class="role">Frontend, UI Developer</strong>
+                <!--
+                <div class='testingDiv'>
+                <a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a>
+                <a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a>
+                <a href="mailto: ishaanbhandari0@gmail.com"><i class="icon-inbox"></i></a>
+                <a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a>
+              </div>
+            -->
+                </div>
+
+
+
+
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       <br><br><br>
     </div>
 
