Partner Section additions (incomplete)

--- a/index.html
+++ b/index.html
@@ -253,24 +253,32 @@
     	</div>
     </section>
 
+<section class="ftco-section ftco-no-pt ftc-no-pb bg-white">
+<section>
+</section>
     <div id="ftco-about">
       <div class="container">
         <div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 text-center heading-section ftco-animate">
+            <p></p>
+            <p></p>
+            <p></p>
               <p></p>
               <p></p>
               <p></p>
-              <h2 class="mb-4">The Team</h2>
+              <h2 class="mb-4">Partners</h2>
           </div>
         </div>
         <div class="row">
           <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
-              <img src="images/team/ayaanpic.png" alt="Template">
-              <h3>Ayaan<br>Haque</h3>
-              <strong class="role">Fullstack, Backend</strong>
+              <img src="images/team/rueb.png" alt="Template">
+              <h3>Dr. Marilee<br>Ruebsamen</h3>
+              <strong class="role">Therapist</strong>
+              <p>Psychologist specializing </p>
             </div>
           </div>
+
           <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
               <img src="images/team/vijarjpic.png" alt="Template">
@@ -310,21 +318,24 @@
           </div>
         </div>
       </div>
-
+</section>
 
       <div id="ftco-about">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 text-center heading-section ftco-animate">
-
+              <p></p>
+              <p></p>
+              <p></p>
+              <h2 class="mb-4">The Team</h2>
             </div>
           </div>
           <div class="row">
             <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
               <div class="ftco-staff">
-                <img src="images/team/rueb.png" alt="Template">
-                <h3>Marilee<br>Ruebsamen</h3>
-                <strong class="role">Therapist</strong>
+                <img src="images/team/ayaanpic.png" alt="Template">
+                <h3>Ayaan<br>Haque</h3>
+                <strong class="role">Fullstack, Backend</strong>
               </div>
             </div>
             <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
