--- a/analysis.html
+++ b/analysis.html
@@ -77,6 +77,8 @@
       <div class="row justify-content-center mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
+            <span><b>NOTE: Page is under serious development. Model and general analysis process are not up to date. Please check back in the future for a fully functional version.</b></span>
+            <br><br>
           <h2 class="mb-4">Classify Your Messages</h2>
           <p>Please fill out the form below with text that you copied from a message or remembered hearing. Make sure the text is over 70 words, or you will get an inaccurate result.</p>
           <hr>
