--- a/pairings.html
+++ b/pairings.html
@@ -127,7 +127,7 @@ display: center;
   border-top: none;
 }
 </style>
-<!-- <section class="ftco-section bg-white">
+<section class="ftco-section bg-white">
   <div class="container">
     <div class="row justify-content-center mb-5">
       <div class="col-md-7 text-center heading-section ftco-animate">
@@ -352,7 +352,7 @@ display: center;
       background: #ffffff;
     }
     </style>
- -->
+
 
 
 
@@ -457,7 +457,7 @@ display: center;
 
 
 
-    <!-- <section class="ftco-section bg-white">
+    <section class="ftco-section bg-white">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
@@ -504,7 +504,7 @@ display: center;
                         </div>
 
                   </div>
-    </section> -->
+    </section>
 
     <footer class="ftco-footer ftco-bg-dark ftco-section">
       <div class="container">
