--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
               <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
     	        	<div class="text mt-4">
-    	            <h1 class="mb-3"><span> <img src="images/hand-logo.png" height="45px"> SuiSense</span></h1>
+    	            <h1 class="mb-3"><span> <!--<img src="images/hand-logo.png" height="45px">-->SuiSense</span></h1>
                   <p>Using Artificial Intelligence to distinguish between suicidal and depressive messages</p>
                   <p><a href="analysis.html" class="btn btn-primary px-4 py-3">Get Started</a></p>
 
