--- a/pairings.html
+++ b/pairings.html
@@ -54,8 +54,8 @@
 	        <div class="one-forth d-flex align-items-center ftco-animate js-fullheight">
 
 	        	<div class="text mt-5">
-	        		<span class="subheading">Home -> Pairings</span>
-	            <h1 class="mb-3"> <span>Pairings</span></h1>
+	        		<span class="subheading">Home -> Support</span>
+	            <h1 class="mb-3"> <span>Support</span></h1>
 	          </div>
 	        </div>
 	    	</div>
