progression model added in homepage

--- a/index.html
+++ b/index.html
@@ -219,8 +219,8 @@
 		            		<span class="flaticon-cloud"></span>
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
-		                <h3 class="heading">Our Data</h3>
-		                <p> Our model is trained on data from the subreddits "Suicide" and "Depression" since more people are likely to open up on an anonymous platform like reddit.</p>
+		                <h3 class="heading">Progression Model</h3>
+		                <p> We also have a progression model which classifies the patient into one of 6 different cateogries based on Jessie Bering's classification which gives a more specific diagnosis for the patient.</p>
 		              </div>
 		            </div>
     					</div>
