--- a/index.html
+++ b/index.html
@@ -252,6 +252,70 @@
     		</div>
     	</div>
     </section>
+
+    <section class="ftco-section">
+      <div class="container">
+        <div class="row justify-content-center mb-5 pb-3">
+          <div class="col-md-7 text-center heading-section ftco-animate">
+            <p></p>
+            <p></p>
+            <p></p>
+            <h2 class="mb-4">Consultants</h2>
+            <p>Throughout development, SuiSense has consulted with psychologists to understand the issues facing depressed and suicidal teens.
+              These consultants and their professional experience has been instrumental in helping our team understand the foundational problems and the most effective ways
+              to approach them.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/genericAvatar.png" alt="Template">
+              <h3>Paul<br>Marcille</h3>
+              <strong class="role">Psychologist, PhD</strong>
+              <center>
+              <div class="col-md-7">
+              <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
+                Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
+              </p>
+            </div>
+          </center>
+            </div>
+          </div>
+          <!--
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/vijarjpic.png" alt="Template">
+              <h3>Viraaj<br>Reddi</h3>
+              <strong class="role">Fullstack, Backend</strong>
+
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/adithyapic.png" alt="Template">
+              <br>
+              <h3>Adithya<br>Peruvemba</h3>
+              <strong class="role">Frontend, UI Developer</strong>
+
+            </div>
+          </div>
+          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/ishaanpic.png" alt="Template">
+              <h3>Ishaan<br>Bhandari</h3>
+              <strong class="role">Frontend, UI Developer</strong>
+              <!--
+              <div class='testingDiv'>
+              <a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a>
+              <a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a>
+              <a href="mailto: ishaanbhandari0@gmail.com"><i class="icon-inbox"></i></a>
+              <a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a>
+            </div>
+          -->
+              </div>
+            </div>
+          </section>
 <!--
 <section class="ftco-section ftco-no-pt ftc-no-pb bg-white">
 <section>
@@ -320,7 +384,7 @@
       </div>
 </section>
 -->
-      <div id="ftco-about">
+      <section class="ftco-section bg-light">
         <div class="container">
           <div class="row justify-content-center mb-5 pb-3">
             <div class="col-md-7 text-center heading-section ftco-animate">
@@ -328,6 +392,7 @@
               <p></p>
               <p></p>
               <h2 class="mb-4">The Team</h2>
+              <p>Meet the team behind SuiSense.</p>
             </div>
           </div>
           <div class="row">
@@ -376,11 +441,7 @@
               </div>
             </div>
           </div>
-        </div>
-
-
-      <br><br><br>
-    </div>
+        </section>
 
 <style>
 .testingDiv {
@@ -390,7 +451,7 @@
 }
 </style>
 
-    <section class="ftco-section bg-light">
+    <section class="ftco-section">
     	<div class="container">
     		<div class="row justify-content-center mb-5">
           <div class="col-md-7 text-center heading-section ftco-animate">
