--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	          <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li>
+	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
 	          <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
 	        </ul>
 	      </div>
@@ -545,7 +545,7 @@
                 <li><a href="index.html" class="py-2 d-block">Home</a></li>
                 <li><a href="analysis.html" class="py-2 d-block">Diagnosis</a></li>
                 <li><a href="pairings.html" class="py-2 d-block">Support</a></li>
-                <li><a href="blog.html" class="py-2 d-block">Forum</a></li>
+                <!-- <li><a href="blog.html" class="py-2 d-block">Forum</a></li> -->
                 <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
               </ul>
             </div>
