New Analysis Page

--- a/analysis2.html
+++ b/analysis2.html
@@ -44,8 +44,8 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
-	          <li class="nav-item active"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
-            <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
+            <li class="nav-item"><a class="nav-link" href="analysis.html">Diagnosis</a></li>
+	          <li class="nav-item active"><a href="analysis2.html" class="nav-link">Advanced Analysis</a></li>
 	          <li class="nav-item"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
 	        </ul>
