--- a/pairings.html
+++ b/pairings.html
@@ -37,6 +37,7 @@
 	        <ul class="navbar-nav ml-auto">
             <li class="nav-item"><a href="index.html" class="nav-link">Home</a></li>
 	          <li class="nav-item"><a href="analysis.html" class="nav-link">Diagnosis</a></li>
+            <li class="nav-item"><a class="nav-link" href="analysis2.html">Advanced Analysis</a></li>
 	          <li class="nav-item active"><a class="nav-link" href="pairings.html">Support</a></li>
 	          <!-- <li class="nav-item"><a href="blog.html" class="nav-link">Forum</a></li> -->
             <li class="nav-item cta"><a href="analysis.html" class="nav-link"><span>Get started</span></a></li>
