--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 		            	</div>
 		              <div class="mt-3 media-body media-body-2">
 		                <h3 class="heading">Primary Diagnosis</h3>
-		                <p>Using our basic NLP model, a friend can paste or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </p>
+		                <p>Using our basic NLP model, a friend can paste or write out text, and will be able to see if their friend is suffering depression or is on the suicidal side.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;   </p>
 		              </div>
 		            </div>
     					</div>
