added race based

--- a/pairings.html
+++ b/pairings.html
@@ -199,6 +199,9 @@ display: center;
                                <input type="text" class="form-control" placeholder="Therapist Type">
                              </div>
                              <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Demographic Information (Age, Gender, Race, who you specialize with)">
+                             </div>
+                             <div class="form-group">
                                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Your Bio"></textarea>
                              </div>
                              <div class="form-group">
@@ -260,6 +263,9 @@ display: center;
                              </div>
                              <div class="form-group">
                                <input type="text" class="form-control" placeholder="Address">
+                             </div>
+                             <div class="form-group">
+                               <input type="text" class="form-control" placeholder="Demographic Information (Age, Gender, Race, what kind of therapist would you like)">
                              </div>
                              <div class="form-group">
                                <textarea name="" id="" cols="30" rows="7" class="form-control" placeholder="Summary of your situation"></textarea>
