added consultants and partnerships

--- a/index.html
+++ b/index.html
@@ -272,17 +272,65 @@
           <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
               <img src="images/team/genericAvatar.png" alt="Template">
-              <h3>Paul<br>Marcille</h3>
+              <br>
+              <br>
+              <h3>Paul Marcille</h3>
               <strong class="role">Psychologist, PhD</strong>
-              <center>
-              <div class="col-md-7">
+              <div class="col-md-12">
+              <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
+                Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
+              </p>
+
+              <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+                <div class="ftco-staff">
+                  <img src="images/team/genericAvatar.png" alt="Template">
+                  <br>
+                  <br>
+                  <h3>Paul Marcille</h3>
+                  <strong class="role">Psychologist, PhD</strong>
+
+              <div class="col-md-12">
               <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
                 Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
               </p>
             </div>
-          </center>
+
             </div>
           </div>
+
+          <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+            <div class="ftco-staff">
+              <img src="images/team/genericAvatar.png" alt="Template">
+              <br>
+              <br>
+              <h3>Paul Marcille</h3>
+              <strong class="role">Psychologist, PhD</strong>
+
+          <div class="col-md-12">
+          <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
+            Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
+          </p>
+        </div>
+
+        </div>
+      </div>
+
+      <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
+        <div class="ftco-staff">
+          <img src="images/team/genericAvatar.png" alt="Template">
+          <br>
+          <br>
+          <h3>Paul Marcille</h3>
+          <strong class="role">Psychologist, PhD</strong>
+
+      <div class="col-md-12">
+      <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
+        Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
+      </p>
+    </div>
+
+    </div>
+  </div>
           <!--
           <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
@@ -317,73 +365,30 @@
               </div>
             </div>
           </section>
-<!--
-<section class="ftco-section ftco-no-pt ftc-no-pb bg-white">
-<section>
-</section>
-    <div id="ftco-about">
-      <div class="container">
-        <div class="row justify-content-center mb-5 pb-3">
-          <div class="col-md-7 text-center heading-section ftco-animate">
-            <p></p>
-            <p></p>
-            <p></p>
-              <p></p>
-              <p></p>
-              <p></p>
-              <h2 class="mb-4">Partners</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/rueb.png" alt="Template">
-              <h3>Dr. Marilee<br>Ruebsamen</h3>
-              <strong class="role">Therapist</strong>
-              <p>Psychologist specializing </p>
-            </div>
-          </div>
 
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/vijarjpic.png" alt="Template">
-              <h3>Viraaj<br>Reddi</h3>
-              <strong class="role">Fullstack, Backend</strong>
 
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/adithyapic.png" alt="Template">
-              <br>
-              <h3>Adithya<br>Peruvemba</h3>
-              <strong class="role">Frontend, UI Developer</strong>
 
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-3 text-center animate-box" data-animate-effect="fadeIn">
-            <div class="ftco-staff">
-              <img src="images/team/ishaanpic.png" alt="Template">
-              <h3>Ishaan<br>Bhandari</h3>
-              <strong class="role">Frontend, UI Developer</strong>
-              <!--
-              <div class='testingDiv'>
-              <a href="https://www.facebook.com/ishaan.bhandari.50"><i class="icon-facebook"></i></a>
-              <a href="#https://github.com/ishaan-bhandari"><i class="icon-github"></i></a>
-              <a href="mailto: ishaanbhandari0@gmail.com"><i class="icon-inbox"></i></a>
-              <a href="#https://www.instagram.com/ishaan.bhandari/"><i class="icon-instagram"></i></a>
-            </div>
+          <center><h1>Partnerships</h1></center>
+          <br>
+          <div class="row">
+            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+              <div class="media block-6 services d-flex align-items-center">
+                <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
+                  <h3 class="heading"><center>CAPA</center></h3>
+                  <p class="mb-0"><center>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</center>
 
+                </div>
               </div>
-
-
-
-
             </div>
-          </div>
-        </div>
-      </div>
-</section>
+            <div class="col-md-6 d-flex align-self-stretch ftco-animate">
+              <div class="media block-6 services d-flex align-items-center">
+                <div class="media-body pl-4">
+                  <h3 class="heading"><center>Depression vs Suicide</center></h3>
+                  <p class="mb-0"><center>Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</center></p>
+                </div>
+              </div>
+            </div>
+
 -->
       <section class="ftco-section bg-light">
         <div class="container">
