--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services d-flex align-items-center">
                 <div class="media-body pl-4 pl-md-0 pr-md-4 text-md-left">
-                  <h3 class="heading"><center>CAPA</center></h3>
+                  <h3 class="heading"><center>Children's Addiction Prevention Association</center></h3>
                   <p class="mb-0"><center>In an age with more communication happening through an online medium, it is increasingly hard to decipher people’s emotions especially with respect to damaging mental health effects like depression and suicide. Especially in the wake of COVID, mental health has taken a serious toll on people across the world.With the insurmountable stress accumulating from quarantine, which can come from being laid off or dealing with an abusive family, more people are struggling than ever before.</center>
 
                 </div>
@@ -383,7 +383,7 @@
             <div class="col-md-6 d-flex align-self-stretch ftco-animate">
               <div class="media block-6 services d-flex align-items-center">
                 <div class="media-body pl-4">
-                  <h3 class="heading"><center>Depression vs Suicide</center></h3>
+                  <h3 class="heading"><center>Mental Health Initiative</center></h3>
                   <p class="mb-0"><center>Depression and suicide might seem similar, but they have very specific differences that have big implications on how to support and treat a patient. Depression, the root of suicide, is widely considered to be a key risk factor. Suicide is much more severe, and a lot more support is needed to treat a patient. Those who struggle often open up to their friends over text and send messages; however, these friends are often in the dark in terms of trying to understand their friend's mental state.</center></p>
                 </div>
               </div>
