added pythonanywhere notebooks, removed old progression model

--- a/analysis.html
+++ b/analysis.html
@@ -71,7 +71,7 @@
       </div>
     </div>
 
-
+<!--
 
   <section class="ftco-section">
     <div class="container">
@@ -91,15 +91,17 @@
 
   <iframe src="https://suisense.pythonanywhere.com/" width="100%" height="600" frameBorder="0"></iframe>
 
+-->
+
+
   <section class="ftco-section">
     <div class="container">
       <div class="row justify-content-center mb-5">
         <div class="col-md-7 text-center heading-section ftco-animate">
           <center>
-            <span><b>NOTE: Page is under serious development. Model and general analysis process are not up to date. Please check back in the future for a fully functional version.</b></span>
             <br><br>
           <h2 class="mb-4">Determine Depression Stage</h2>
-          <p>Please fill out the form below with text that you copied from a message or remembered hearing. Make sure the text is over 70 words, or you will get an inaccurate result. This will provide you with the stage of depression the patient is currently at.</p>
+          <p>Please fill out the form below with text that you copied from a message or remembered hearing. NOTE: The text currently only works for text under 128 words. We are working to rectify this at the moment.</p>
           <hr>
           </center>
         </div>
@@ -111,6 +113,8 @@
 
     </center>
   </section>
+
+
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-101184475-5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
