--- a/index.html
+++ b/index.html
@@ -271,15 +271,17 @@
         <div class="row">
           <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
             <div class="ftco-staff">
-              <img src="images/team/genericAvatar.png" alt="Template">
+              <img src="images/drmarcille.png" alt="Template">
               <br>
               <br>
               <h3>Paul Marcille</h3>
-              <strong class="role">Psychologist, PhD</strong>
+              <strong class="role">Psychologist, PhD, Santa Clara County</strong>
               <div class="col-md-12">
-              <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-                Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
-              </p>
+                <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
+                  He is the former President of the California and Santa Clara Psychological Associations and a former Professor & Program Director at Palo Alto University.
+                  Dr. Marcille has helped us define the problem we are solving and has helped polish and refine the direction of our solution.
+                  Dr. Marcille has supported our concept and we are currently working towards validating and implementing our solution.
+                </p>
 
               <div class="col-md-12 col-sm-12 text-center animate-box" data-animate-effect="fadeIn">
                 <div class="ftco-staff">
@@ -325,7 +327,7 @@
 
       <div class="col-md-12">
       <p>Dr. Marcille is a licensed psychologist with 35 years experience working as a therapist and university professor and administrator.
-        Dr. Marcille works with young people and adults, helping them deal with the academic and personal challenges and helps them to achieve their goals.
+        Past president of the California and Santa Clara Psychological Associations and former Professor & Program Director at Palo Alto University,
       </p>
     </div>
 
