--- a/pairings.html
+++ b/pairings.html
@@ -332,13 +332,13 @@ display: center;
                 </div>
               </div>
               <style>
-                        .redDiv {
+                        .redDiv1 {
                           display: none;
                           border: 1px solid red;
                         }
                         </style>
               <p id = "demo1"></p>
-              <p class = "redDiv" id = "fail1"></p>
+              <p class = "redDiv1" id = "fail1"></p>
               <script>
               function beastfunction2(){
               var name = document.getElementById("conName1").value;
